<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/admin_activity"
    android:background="?background"
    android:layout_height="match_parent"
    tools:context=".activities.OrganizerActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/admin_layout">

        <ImageView
            android:id="@+id/image_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/transparent">

            <RelativeLayout
                android:id="@+id/organizer_attendee_actionbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?attr/action_bar_attendee">


                <ImageButton
                    android:id="@+id/button_user_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/switch_user_mode_night"
                    android:background="@color/transparent"
                    android:layout_marginStart="5dp"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/attendee_organizer_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:clickable="false"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="35sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/event_layout"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/actionbar_general"
                android:layout_marginTop="120sp">

                <Button
                    android:id="@+id/browse_events_button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginEnd="20sp"
                    android:layout_marginBottom="20sp"
                    android:backgroundTint="@color/admin_actionbar"
                    android:text=" Browse Events"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/profile_layout"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/actionbar_layout"
               >

                <Button
                    android:id="@+id/browse_profiles_button"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginEnd="20sp"
                    android:layout_marginBottom="20sp"
                    android:backgroundTint="@color/admin_actionbar"
                    android:text=" Browse Profiles"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/image_layout"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/actionbar_layout"
                >

                <Button
                    android:id="@+id/browse_images_button"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginEnd="20sp"
                    android:layout_marginBottom="20sp"
                    android:backgroundTint="@color/admin_actionbar"
                    android:text=" Browse Images"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>

            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>