<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?backgroundColor"
    tools:context=".adminFragments.ViewEventsAdmin">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/admin_events_layout">

        <LinearLayout
            android:id="@+id/admin_view_event_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/general_actionbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/attendee_actionbar_day">

                <ImageButton
                    android:id="@+id/view_events_back_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:background="?selectableItemBackgroundBorderless"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_back_arrow_night" />

                <TextView
                    android:id="@+id/general_actionbar_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:clickable="false"
                    android:text=""
                    android:textSize="35sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

            </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/event_recyclerview"
            android:layout_weight="1000"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>