<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:background="?backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AttendeeActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/admin_view_images_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/admin_image_view">

            <include layout="@layout/actionbar_editprofile_admin" />


            <LinearLayout
                android:id="@+id/switch_image_type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_marginBottom="8sp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="8sp"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/switch_image_type_button"
                    style="@style/CustomOutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Browse User Images"
                    app:icon="@drawable/ic_event_list"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/event_poster_recyclerview"
                android:layout_weight="1000"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="3sp"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/user_image_recyclerview"
                android:layout_weight="1000"
                android:clickable="false"
                android:focusable="false"
                android:layout_marginTop="3sp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>