<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_view_profiles_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    android:clickable="true"
    android:elevation="2dp"
    android:focusable="true"
...
        android:id="@+id/general_actionbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/attendee_actionbar_day">

        <ImageButton
            android:id="@+id/view_profiles_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:background="?selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
...
            android:textSize="35dp"
            android:textStyle="bold">
        </TextView>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profiles_admin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/general_actionbar"
        android:layout_marginTop="0dp" />


...
